--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -13,8 +13,8 @@
         <div class="panel-body">
           <div class="col-lg-12 col-md-12 col-sm-12">
                 {% if invalid %}
-                    <h5 class="error" id="error_username">{{message}}</h5> 
-                    <h5 class="logout">{{outMessage}}</h5> 
+                    <h5 class="error" id="error_username">{{message}}</h5>
+                    <h5 class="logout">{{outMessage}}</h5>
                 {% endif %}
                 <form id="login_form" method="post" action="/login/">
                 {% csrf_token %}
@@ -23,13 +23,13 @@
                      <p id="p_username">
                         <label for="id_username">Username:</label>
                         <input id="id_username" maxlength="30" name="username" placeholder="Username" type="text" class="form-control" required/> <span class="helptext"></span>
-                    </p> 
+                    </p>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6" >
                     <p id="p_password">
                         <label for="id_password">Password:</label>
                         <input id="id_password" name="password" type="password" class="form-control" placeholder="Must be 8 characters" required />
-                    </p>                    
+                    </p>
                   </div>
                   <div class="col-lg-12 col-md-12 col-sm-12" id="login_left" >
                     <div id="log_btn_div">
@@ -43,6 +43,11 @@
                   -->
                 </div><!--form-group-->
               </form>
+              <div class="col-lg-12 col-md-12 col-sm-12" id="login_left" >
+              <div id="log_btn_div">
+                <a href='/reset/password_reset/'><button id="login_btn" type="" value="Reset Password" class="btn btn-success btn_width" click="">Reset Password</button>
+              </div>
+            </div>
           </div><!--/col-lg-12-->
           <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-2" style="display:none;">
              <div class="col-lg-9 col-md-9 col-sm-9" id="login_logo_text">
