--- a/templates/password_reset/reset_success.html
+++ b/templates/password_reset/reset_success.html
@@ -8,13 +8,13 @@
     {% load staticfiles %}
     <title>PhilSHORE {{page_title}}</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.css"  %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "base/css/bootstrap.min.css"  %}" />
     <!-- Register -->
-    <link href="{% static "css/register_success.css"  %}" rel="stylesheet">
+    <link href="{% static "accounts/css/register_success.css"  %}" rel="stylesheet">
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container pull-right reg_nav_container"></div>                                    
+      <div class="container pull-right reg_nav_container"></div>
     </div>
     <div id="container_reg" class="container-fluid">
       <div class="row">
@@ -24,13 +24,13 @@
             <div class="panel-heading">
               <div class="panel-title"><h1>&nbsp;Password Reset Successful!</h1></div>
             </div>
-            
+
             <div class="panel-body">
               <div class="col-lg-12 col-md-12 col-sm-12 success_reg_text" >
               <h3 class="pull-right">Your password has been reset</h3>
               <h3 class="pull-right">Your new password has already been sent to your mail.</h3>
-              <h4 class="pull-left"><a href="/">Click here to visit the Philshore Map.</a></h4>
-                
+              <h4 class="pull-left"><a href="/">Return to Login Page.</a></h4>
+
               </div><!--/col-lg-12-->
 
               <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-4 pull-right" id="success_logo_div">
@@ -41,45 +41,32 @@
                     <h5 class="pull-right">Philippine Sites for Harnessing Ocean Renewable Energy</h5>
                   </div>
                   <div class="col-lg-3 pull-left" id="success_logo_logo">
-                    <img class="logo_size" src="{% static "images/PhilSHORE Logo.png"  %}" alt="philshore logo">
-                  </div>                                           
+                    <img class="logo_size" src="{% static "base/img/PhilSHORE Logo.png"  %}" alt="philshore logo">
+                  </div>
               </div>
           </div><!--/panel-body-->
         </div><!--/panel-->
-          
+
         </div><!--/col-lg-5-->
         <div class="col-lg-5 col-md-5 col-sm-5 mtop_8em reg_side_div" >
           <h1>Tidal Current Energy Integrated Resource Assessment</h1>
           <h1>and Spatial Planning Tool</h1>
           <p align="justify">
-            PhilSHORE is a multi-site, multi-device and multi-criteria decision support tool designed to support the development of tidal current energy in the Philippines. Its platform is based on Geographic Information Systems (GIS) which allows for the collection, storage, processing, analyses and display of geospatial data. Combining GIS tools with open source web development applications, PhilSHORE becomes a webGIS-based marine spatial planning tool. 
+            PhilSHORE is a multi-site, multi-device and multi-criteria decision support tool designed to support the development of tidal current energy in the Philippines. Its platform is based on Geographic Information Systems (GIS) which allows for the collection, storage, processing, analyses and display of geospatial data. Combining GIS tools with open source web development applications, PhilSHORE becomes a webGIS-based marine spatial planning tool.
           </p>
-          <img src="{% static "images/webgis_shot.png"  %}" class="img-responsive" id="side_ctn_img" alt="Screenshot of the MSP Tool.">
+          <img src="{% static "accounts/img/webgis_shot.png"  %}" class="img-responsive" id="side_ctn_img" alt="Screenshot of the MSP Tool.">
         </div>
       </div> <!--/row-->
     </div><!--/container-->
     <div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="container">
-        <div class="row">
-            <ul class="list-inline" id="footer_content">
-              <li id="footer_home"><a href="#">Home</a></li>
-              <li id="home_about"> | </li>
-              <li id="footer_about"><a href="#">About</a></li>
-              <li id="about_tc"> | </li>
-              <li id="footer_tc"><a href="#">Terms and Conditions</a></li>
-              <li id="tc_data"> | </li>
-              <li id="footer_data"><a href="#">Data Use Policy</a></li>
-              <li id="data_contact"> | </li>
-              <li id="footer_contact"><a href="#">Contact</a></li>
-            </ul>
-        </div>
       </div>
     </div>
  </body>
   <!-- Jquery -->
-  <script src="{% static "js/jquery-2.1.4.min.js"  %}"></script>
+  <script src="{% static "base/js/jquery-2.1.1.min.js"  %}"></script>
   <!-- Bootstrap -->
-  <script src="{% static "js/bootstrap.min.js"  %}"></script>
+  <script src="{% static "base/js/bootstrap.min.js"  %}"></script>
   <!-- Register -->
-  <script src="{% static "js/register.js"  %}"></script>
+  <script src="{% static "accounts/js/register.js"  %}"></script>
 </html>
