--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -45,9 +45,14 @@
               </form>
               <div class="col-lg-12 col-md-12 col-sm-12" id="login_left" >
               <div id="log_btn_div">
-                <a href='/reset/password_reset/'><button id="login_btn" type="" value="Reset Password" class="btn btn-success btn_width" click="">Reset Password</button>
+                <a href='/reset/password_reset/'><button id="login_btn" type="" value="Reset Password" class="btn btn-warning btn_width" click="">Reset Password</button>
               </div>
             </div>
+            <div class="col-lg-12 col-md-12 col-sm-12" id="login_left" >
+            <div id="log_btn_div">
+              <a href='/register/'><button id="login_btn" type="" value="Register" class="btn btn-primary btn_width" click="">Register`</button>
+            </div>
+          </div>
           </div><!--/col-lg-12-->
           <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-2" style="display:none;">
              <div class="col-lg-9 col-md-9 col-sm-9" id="login_logo_text">
