--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -59,10 +59,8 @@
                       <p id="p_organization">
                         <label for="id_organization">Project:</label>
                         <select id="id_component" name="component" type="text" class="form-control" required>
-                          <option value="sra-yess">SRA-YESS</option>
-                          <option value="parmap">PARMap</option>
-                          <option value="coastmap">CoastMap</option>
-                          <option value="corva">CoRVA</option>
+                          <option value="philshore">PhilSHORE</option>
+                          <option value="remap">REMap</option>
                       </select>
                       </p>
                     </div>
